Removed faulty .jar